--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 
 <section>
     <h2>Filmes e séries</h2>
+    
     <div>
+    </section>
       <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
         <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
       </a>
@@ -56,4 +58,4 @@
       </a>
     </div>
   </section>
-  
+<!-- código omitido -->
